2009-06-09  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.h:
	* capplet/nwam_net_conf_panel.c (nwam_compose_tree_view),
	(nwam_net_conf_panel_init), (nwam_net_conf_update_status_cell_cb),
	(static_group_handle_fake_node), (condition_view_drop_motion),
	(condition_view_drop_data_received), (ncu_find_gt_name),
	(capplet_tree_store_move_children), (handle_ncu_group_node),
	(on_button_clicked), (update_widgets), (ncu_pri_group_get_path),
	(ncu_pri_group_get_iter), (ncu_pri_treeview_add),
	(ncu_pri_treeview_remove): Update some functions for DnD, though it 
	doesn't work right now.

2009-06-08  Darren Kenny  <darren.kenny@sun.com>

	* common/libnwamui.c: 
	  Don't unref a NULL ncp pointer.
	* common/nwamui_daemon.c: 
	  Add new functions nwamui_daemon_nwam_connect(), 
	  and nwamui_daemon_nwam_disconnect() to handle connection to nwam
	  daemon. The connect function will look at the SMF service state and
	  possibly block until it's on-line (depending on block param).
	* nwam_core/usr/include/libnwam.h, nwam_core/usr/include/sys/mac.h:
	  Update to latest versions.

2009-06-04  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c, common/nwamui_daemon.h:
	  Change nwamui_daemon_status_t enum to allow for generation of useful
	  states for representation in panel icon.
	  Add function nwamui_daemon_get_status_icon_type() to allow for
	  getting of the status icon type (nwamui_env_status_t) that more
	  aptly reflects the state of the daemon. Also add supporting
	  functions to allow for determining that state in a call to
	  nwamui_daemon_update_status().
	* daemon/status_icon.c:
	  Fix references to NWAMUI_DAEMON_STATUS_* enums.
	  In nwam_status_icon_set_status() try getting env_status from daemon
	  rather than based off various callers to the funciton, will clean up
	  function calls to not use the env_status params later.
	* common/libnwamui.c:
	  Change some g_warning calls to g_debug. Fix error in call to
	  nwamui_ncu_get_active when ncu == NULL.