@@ -1,3 +1,8 @@
+2009-06-10  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* capplet/nwam_net_conf_panel.c (on_button_clicked),
+	(update_widgets): Enable move up/down.
+
 2009-06-09  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* capplet/capplet-utils.h:
